2005-01-26 Alain Magloire
	Part of implementing PR 83112
	* src/org/eclipse/cdt/internal/ui/cview/CView.java
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDragAdapter.java
	* src/org/eclipse/cdt/internal/ui/cview/SelectionTransferDropAdapter.java
	* src/org/eclipse/cdt/internal/ui/dnd/*.java

2005-01-24 Vladimir Hirsl
	SCD work for CDT 3.0
	Better displaying of error messages in TabFolderOptionBlock.
	* src/org/eclipse/cdt/ui/dialogs/TabFolderOptionsBlock.java
	* src/org/eclipse/cdt/internal/ui/CUIMessages.properties
	
2005-01-24 Alain Magloire
	PR 83514 patch from Przemek
	* src/org/eclipse/cdt/internal/ui/actions/ActionMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CoutlineInformaionControl.java
	* NEWS

2005-01-22 Alain Magloire
	PR 38958
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementImageProvider.java

2005-01-20 Alain Magloire
	PR 82964 patch from Przemek
	* icons/full/cview16/view_menu.gif
	* src/org/eclipse/cdt/internal.ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/actions/ActionMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CSourceViewer.java
	* src/org/eclipse/cdt/internal/ui/text/CCodeScanner.java
	* src/org/eclipse/cdt/internal/ui/text/COperatorRule.java
	* src/org/eclipse/cdt/internal/ui/text/COutlineInformationControl.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java
	* src/org/eclipse/cdt/internal/ui/text/contenassist/CCompletionProcessor.java

2005-01-19 Alain Magloire
	PR 83151
	* src/org/eclipse/cdt/ui/CElementContentProvider.java

2005-01-11 David Inglis
	Further fix to 36837
	
	* src/org/eclipse/cdt/internal/ui/util/ResourceToItemsMapper.java
	
2005-01-11 David Inglis

	Fix for 82516
	
	* src/org/eclipse/cdt/internal/ui/viewsupport/CElementLabels.java
	

2005-01-07 Alain Magloire
	Part of Fix 82323.
	The "New" action was not shown when workspace was empty
	or no selection.
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java